# daisy-garden

./: Cargo.toml  LICENSE  README.md  bacon.toml  rust-toolchain
.cargo/: config.toml
crates/daisy-garden/: Cargo.toml
crates/daisy-garden/examples/: pink_noise.rs  pulse_train.rs
crates/daisy-garden/src/: clocks.rs  fhx.rs  gates.rs  lib.rs  main.rs  params.rs  patch_init.rs
crates/dg-clock/: Cargo.toml
crates/dg-clock-mult/: Cargo.toml
crates/dg-clock-mult/src/: lib.rs
crates/dg-clock-mult/tests/: clock_forward.rs
crates/dg-clock/src/: lib.rs
crates/dg-clock/tests/: clock_forward.rs
crates/dg-noise/: Cargo.toml
crates/dg-noise/examples/: dump.rs
crates/dg-noise/src/: lib.rs
crates/dg-traits/: Cargo.toml
crates/dg-traits/src/: lib.rs
crates/dg-types/: Cargo.toml
crates/dg-types/src/: clock_in.rs  clock_out.rs  float_parameter.rs  int_parameter.rs  lib.rs
scripts/: plot_spectrum.py
