[workspace]
resolver = "2"
members = ["crates/*"]


[workspace.package]
authors = ["Antoine Beyeler"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/abey79/daisy-garden"
rust-version = "1.87"
version = "0.1.0-alpha.1"


[workspace.dependencies]
# own crates
daisy-garden = { path = "crates/daisy-garden", version = "=0.1.0-alpha.1", default-features = false }
dg-clock = { path = "crates/dg-clock", version = "=0.1.0-alpha.1", default-features = false }
dg-traits = { path = "crates/dg-traits", version = "=0.1.0-alpha.1", default-features = false }

# external crates
cortex-m = { version = "0.7", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = { version = "0.7", features = ["device"] }
critical-section = "1.2.0"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
daisy-embassy = { version = "0.2.1", default-features = false, features = [
  "patch_sm",
] }
embassy-futures = { version = "0.1", default-features = false }
embassy-executor = { version = "0.7.0", default-features = false }
embassy-stm32 = { version = "0.2.0", features = [
  "defmt",
  "stm32h750ib",
  "time-driver-tim5",
  "exti",
  "memory-x",
  "unstable-pac",
  "chrono",
] }
embassy-time = { version = "0.4.0", default-features = false }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
futures = "0.3"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
tokio = { version = "1.45", features = ["full"] }

[patch.crates-io]
#daisy-embassy = { git = "https://github.com/abey79/daisy-embassy.git", branch = "patch-sm" }


[workspace.lints.clippy]


[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
