[package]
name = "daisy-garden"
description = "Top-level firmware crate."
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
# readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true


[features]

[dependencies]
dg-clock.workspace = true
dg-noise.workspace = true
dg-types.workspace = true

defmt.workspace = true
embassy-stm32.workspace = true
libm.workspace = true


[dev-dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
critical-section.workspace = true
defmt-rtt.workspace = true
daisy-embassy.workspace = true
embassy-sync.workspace = true
fhx.workspace = true
panic-probe.workspace = true


[target.thumbv7em-none-eabihf.dev-dependencies]
embassy-time = { workspace = true, features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
] }
embassy-executor = { workspace = true, features = [
  "task-arena-size-32768",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
