[package]
name = "dg-clock"
description = "Assorted clock utilities"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
host-testing = ["embassy-time/std", "embassy-time/generic-queue-8"]

[dependencies]
dg-types.workspace = true

embassy-time.workspace = true


[dev-dependencies]
embassy-futures.workspace = true
tokio.workspace = true

[lints]
workspace = true
