[package]
name = "dg-traits"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
embassy-time.workspace = true
embedded-hal.workspace = true
embedded-hal-async.workspace = true

[lints]
workspace = true
